--- a/web/src/templates/drop-down-view.html
+++ b/web/src/templates/drop-down-view.html
@@ -12,7 +12,7 @@
     .background-panel {
         height: 100vh;
         width: 100vw;
-        background: url("./background.png");
+        background-image: url('./background.png');
         background-size: cover;
         background-position: center;
         display: flex;
