Refactored Webpack build, Readme additions, organized assets, linted code, etc.

--- a/web/src/templates/app-header-view.html
+++ b/web/src/templates/app-header-view.html
@@ -81,11 +81,11 @@
     flex-direction: row;
     max-width: 460px;
     width: 100%;
-    
+
   }
 
   .stat-panel {
-    opacity:0;
+    opacity: 0;
   }
 
   .title-panel {
@@ -115,11 +115,13 @@
 <div class='content-panel'>
   <div class="title-panel">
     <div class="hamburger-button">
-      <svg width="28" height="21" viewBox="0 0 28 21" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <rect width="28" height="3" rx="1.5" fill="white" />
-        <rect y="9" width="28" height="3" rx="1.5" fill="white" />
-        <rect y="18" width="28" height="3" rx="1.5" fill="white" />
+      <svg width="14" height="25" viewBox="0 0 14 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path fill-rule="evenodd" clip-rule="evenodd"
+          d="M11.5371 24.0827L0.292152 12.9458C-0.0973839 12.5612 -0.0973839 11.9398 0.292152 11.5542L11.5371 0.417333C12.0995 -0.139111 13.0144 -0.139111 13.5777 0.417333C14.14 0.973776 14.14 1.87687 13.5777 2.43332L3.66913 12.2505L13.5777 22.0657C14.14 22.6231 14.14 23.5262 13.5777 24.0827C13.0144 24.6391 12.0995 24.6391 11.5371 24.0827Z"
+          fill="white" />
       </svg>
+
+
     </div>
     <div class="page-title">
 
