Replace hamburger menu with back arrow

--- a/web/src/templates/app-header-view.html
+++ b/web/src/templates/app-header-view.html
@@ -22,7 +22,7 @@
     align-items: center;
   }
 
-  .hamburger-button {
+  .back-arrow {
     margin-left: 40px;
     cursor: pointer;
   }
@@ -114,7 +114,7 @@
 </style>
 <div class='content-panel'>
   <div class="title-panel">
-    <div class="hamburger-button">
+    <div class="back-arrow">
       <svg width="14" height="25" viewBox="0 0 14 25" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path fill-rule="evenodd" clip-rule="evenodd"
           d="M11.5371 24.0827L0.292152 12.9458C-0.0973839 12.5612 -0.0973839 11.9398 0.292152 11.5542L11.5371 0.417333C12.0995 -0.139111 13.0144 -0.139111 13.5777 0.417333C14.14 0.973776 14.14 1.87687 13.5777 2.43332L3.66913 12.2505L13.5777 22.0657C14.14 22.6231 14.14 23.5262 13.5777 24.0827C13.0144 24.6391 12.0995 24.6391 11.5371 24.0827Z"
