--- a/web/src/templates/todo-list-view.html
+++ b/web/src/templates/todo-list-view.html
@@ -28,7 +28,7 @@
   .content-panel {
     background-color: #ffffff;
     box-shadow: 0px 2.61404px 16.9912px rgba(0, 0, 0, 0.042);
-    height: 100%;
+    height: 552px;
     padding: 20px 0 0 0;
     overflow-y:auto;
   }
