--- a/web/src/templates/drop-down-view.html
+++ b/web/src/templates/drop-down-view.html
@@ -40,7 +40,7 @@
     }
 
     .submit-button {
-        width: 228px;
+        width: 238px;
         height: 28px;
         background: linear-gradient(180deg, #58C3FF 0%, #2D7AD5 99.99%, #438EE7 100%);
         border-radius: 3px;
@@ -49,22 +49,23 @@
         text-align: center;
         line-height: 28px;
         cursor: pointer;
-        margin-top: 12px;
-        margin-left: 4px;
+        margin-top: 5px;
     }
 
     .login-component {
-        width: 228px;
-        height: 50px;
+        --width: 238px;
+        --height: 50px;
         background: linear-gradient(180deg, #58C3FF 0%, #2D7AD5 99.99%, #438EE7 100%);
         border-radius: 3px;
         font-size: 12px;
-        color: white;
-        text-align: center;
+        --color: white;
+        --text-align: center;
         line-height: 28px;
         cursor: pointer;
-        margin-top: 12px;
+        --margin-top: 12px;
         margin-left: 1px;
+        --z-index:1;
+
     }
 
     .wrapper .drop-down {
@@ -77,9 +78,11 @@
     }
 
     .wrapper .select {
-        width: 228px;
+        width: 238px;
         border: 1px solid white;
         border-radius: 5px;
+        padding-top: 5px;
+        margin-top:5px;
     }
 
     .group-selector>option {
@@ -88,27 +91,30 @@
 
     .wrapper .drop-down .select {
         background: transparent;
-        line-height: 1;
-        border: 0;
+        line-height: 0;
+        border: none;
+        border-style:none;
         padding: 0;
         border-radius: 0;
-        width: 228px;
+        width: 238px;
         position: relative;
-        z-index: 10;
         font-size: 1em;
         color: white;
     }
 
     .wrapper .select select {
         background: transparent;
-        line-height: 1;
-        border: 0;
+        line-height: 0;
+        border: none;
+        border-style:none;
         padding: 0;
-        border-radius: 0;
-        width: 228px;
+        width: 238px;
         position: relative;
-        z-index: 10;
         font-size: 1em;
+    }
+    select {
+        border: none;
+        border-style:none;
     }
 
     .group-selector {
