--- a/web/src/templates/study-group-item.html
+++ b/web/src/templates/study-group-item.html
@@ -37,7 +37,14 @@
     .go-button {
         height: 48px;
         width: 48px;
+        background-color:#FFFFFF;
+        outline: none;
     }
+
+    .go-button:hover{
+        background-color:#7E7E7E; 
+    }
+  
 </style>
 
 <div class="wrapper">
