--- a/web/src/components/views/main-view/main-view.html
+++ b/web/src/components/views/main-view/main-view.html
@@ -5,10 +5,7 @@
         contain: content;
         font-family: 'Segoe UI';
         background-color: #EEEEEE;
-        /*background-color: #F8FAFA;*/
     }
-
-
 
     .view-header-panel {
         background-color: #EFF3F3;
@@ -163,6 +160,7 @@
     }
 
     @media only screen and (max-width: 952px) {
+        
         .content-panel {
             padding: 0 48px 48px 48px;
         }
@@ -193,8 +191,6 @@
     }
 
     .people-list>li {
-
-
         padding: 4px;
     }
 </style>
@@ -204,15 +200,8 @@
         <div class='header-root'>
             <div class='team-metadata'>
                 <div class='team-name'></div>
-
                 <div class='team-members'>
-                    <mgt-people group-id="235423">
-
-
-
-
-
-                    </mgt-people>
+                    <mgt-people group-id="235423"></mgt-people>
                 </div>
             </div>
             <div class='class-metadata'>
@@ -220,7 +209,6 @@
                 <div class='class-name'></div>
                 <div class='class-teacher'>
                     <mgt-person class="teacher-person" person-query="" show-name person-card="hover"></mgt-person>
-
                 </div>
             </div>
             <div class='buttons-panel'>
@@ -249,10 +237,7 @@
         <div>
             <timeline-view class='timeline'></timeline-view>
             <todo-list-view class='todo-list'></todo-list-view>
-
             <study-groups-view class='study-group'></study-groups-view>
-
-
         </div>
     </div>
 </div>
