--- a/web/src/components/sign-in-view/sign-in-view.html
+++ b/web/src/components/sign-in-view/sign-in-view.html
@@ -171,18 +171,14 @@
         <div class="buttons-panel">
             <div class="wrapper drop-down">
                 <div class='wrapper course select'>
-                    <select class='course-selector'>
-                    </select>
+                    <select class='course-selector'></select>
                 </div>
                 <div class='wrapper group select'>
-                    <select class='group-selector'>
-                    </select>
+                    <select class='group-selector'></select>
                 </div>
-                <div class="submit-button">Submit
-                </div>
+                <div class="submit-button">Submit</div>
             </div>
         </div>
 
     </div>
-
 </div>
