--- a/web/src/components/main-view/main-view.html
+++ b/web/src/components/main-view/main-view.html
@@ -195,7 +195,7 @@
     }
 </style>
 <div class="root-wrapper">
-    <app-header-view></app-header-view>
+    <app-header></app-header>
     <div class='view-header-panel'>
         <div class='header-root'>
             <div class='team-metadata'>
@@ -235,9 +235,9 @@
     </div>
     <div class='content-panel'>
         <div>
-            <timeline-view class='timeline'></timeline-view>
-            <todo-list-view class='todo-list'></todo-list-view>
-            <study-groups-view class='study-group'></study-groups-view>
+            <timeline-component class='timeline'></timeline-component>
+            <todo-list class='todo-list'></todo-list>
+            <study-groups class='study-group'></study-groups>
         </div>
     </div>
 </div>
