--- a/web/src/components/main-view/main-view.html
+++ b/web/src/components/main-view/main-view.html
@@ -93,7 +93,7 @@
         align-items: center;
     }
 
-    .buttons-panel div {
+    .buttons-panel>div {
         margin-right: 32px;
         color: #3063B2;
         cursor: pointer;
