--- a/web/src/components/study-group-item/study-group-item.html
+++ b/web/src/components/study-group-item/study-group-item.html
@@ -1,5 +1,5 @@
 <style>
-    :host {
+ :host {
         all: initial;
         display: block;
         padding: 12px;
@@ -37,6 +37,12 @@
     .go-button {
         height: 48px;
         width: 48px;
+        background-color:#FFFFFF;
+        outline: none;
+    }
+
+    .go-button:hover{
+        background-color:#7E7E7E; 
     }
 </style>
 
