resolve todos: css classes, date string formatting, study group padding

--- a/web/src/components/sign-in-view/sign-in-view.html
+++ b/web/src/components/sign-in-view/sign-in-view.html
@@ -117,13 +117,21 @@
         border-style:none;
     }
 
-    .group-selector {
-        color: white;
-    }
-
     .course-selector {
         color: white;
     }
+    .course-selector > option {
+        background-color:#335795;
+    }
+
+    .group-selector {
+        color: white;
+    }
+    .group-selector > option {
+        background-color:#335795;
+    }
+
+
 </style>
 
 
